# SnartNet

./: .gitignore  Cargo.toml  README.md  RFC  build-android.ps1  build-android.sh  build.sh  clean.sh  package-lock.json  package.json  pnpm-lock.yaml  setup-caddy.sh  snartnet.db
.github/workflows/: compile-android.yml  compile-iphone.yml  compile-linux.yml  compile-macos.yml  compile-windows.yml  deploy-pages.yml
PWA/: DEVELOPMENT.md  README.md  Structure  index.html  npm-ls.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vite.tailwind.config.ts
PWA/public/: manifest.json  service-worker.js  service-worker.template.js
PWA/scripts/: build-assets.ts
PWA/src/: App.css  App.tsx  index.css  main.tsx  settings.js  test-wasm.ts
PWA/src/app/: page.tsx
PWA/src/components/: BackupRestore.tsx  ChatThread.tsx  CreatePost.tsx  EditProfile.tsx  Layout.tsx  Navigation.tsx  PostFeed.tsx  PostTimeline.tsx  ProfileDisplay.tsx  ProfilePictureUploader.tsx  ProfilePosts.tsx  PushStatus.tsx  QRCodeManager.tsx  TorrentStatus.tsx  WebTorrentStatus.tsx
PWA/src/hooks/: useInitializeCore.ts  usePfs.ts  useZenFs.ts
PWA/src/lib/: SnartStorage.ts  appfs.ts  backup.ts  core.ts  debug.ts  fs.ts  imageProcessor.ts  persistence.ts  pfs.ts  postPersistence.ts  resetApp.ts  torrent.ts  zenfs.ts
PWA/src/lib/crypto/: chatKeys.ts  ed25519.ts  keys.ts
PWA/src/lib/push/: headUpdates.ts  messageTransport.ts  messages.ts  transport.ts
PWA/src/pages/: ContactProfilePage.tsx  ContactsPage.tsx  DiscoverPage.tsx  FilesPage.tsx  FriendsPage.tsx  HomePage.tsx  MessagesPage.tsx  NetworkPage.tsx  ProfilePage.tsx  StorageFileManager.tsx  StorageManagerPage.tsx
PWA/src/schemas/: profile.v1.json
PWA/src/stores/: contactStore.ts  messageStore.ts  postStore.ts  profileStore.ts
PWA/src/types/: filer.d.ts  pwa.d.ts  snartnet_core.d.ts
PWA/src/wasm/: snartnet_core.d.ts  snartnet_core.js
android/: README.md  settings.gradle.kts
android-bridge/: Cargo.toml
android-bridge/src/: lib.rs
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/snartnet/android/: MainActivity.kt  NativeBridge.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/gradle/wrapper/: gradle-wrapper.properties
caddy/: Caddyfile
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: crypto.rs  invite.rs  lib.rs  message.rs  post.rs  profile.rs  service.rs  storage.rs  wasm.rs
desktop/: Cargo.toml
desktop/src/: main.rs  transport.rs
docs/: QR_AND_LAN_DISCOVERY.md  ROADMAP.md
legacy/PWA/: .eslintrc.json  DEVELOPMENT.md  README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
legacy/PWA/public/: manifest.json
legacy/PWA/src/: App.css  index.css  main.tsx
legacy/PWA/src/app/: page.tsx
legacy/PWA/src/components/: ChatThread.tsx  CreateProfile.tsx  EditProfile.tsx  MagnetLinkManager.tsx  PostFeed.tsx  ProfileAvatar.tsx  ProfileDisplay.tsx  ProfilePosts.tsx  ProgressBar.tsx
legacy/PWA/src/hooks/: useInitializeCore.ts
legacy/PWA/src/lib/: torrent.ts
legacy/PWA/src/lib/crypto/: ed25519.ts  headUpdate.ts  message.ts
legacy/PWA/src/lib/push/: headUpdates.ts
legacy/PWA/src/pages/: ContactsPage.tsx  FriendsPage.tsx  MessagesPage.tsx
legacy/PWA/src/schemas/: post.v1.json  profile.v1.json
legacy/PWA/src/stores/: contactStore.ts  messageStore.ts  postStore.ts  profileStore.ts
legacy/PWA/src/wasm/: package.json  snartnet_core_bg.wasm  snartnet_core_bg.wasm.d.ts
specs/: CLI.md  GUI.md
