[workspace]
members = ["core"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
blake3 = "1.0"
base64 = "0.21"

[workspace.dependencies.wasm-bindgen]
version = "0.2"

[workspace.dependencies.js-sys]
version = "0.3"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Storage",
  "Window",
]