[package]
name = "snartnet-cli"
version = "0.1.0"
edition = "2021"
description = "SnartNet command-line interface"

[[bin]]
name = "snartnet"
path = "src/main.rs"

[dependencies]
snartnet-core = { path = "../core" }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
