[package]
name = "snartnet-desktop"
version = "0.1.0"
edition = "2021"
description = "SnartNet desktop GUI (iced)"
license = "AGPL-3.0-only"

[[bin]]
name = "snartnet-desktop"
path = "src/main.rs"

[dependencies]
snartnet-core = { path = "../core" }
iced = { version = "0.13", features = ["tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
qrcode = "0.14"
